= RubyMotion 1.25 =

  * Fixed a bug when using Objective-C properties implemented using message
    forwarding (ex. GKMatchRequest's maxPlayers).
  * Fixed a bug in Range evaluation order. Make sure evaluating a Range's begin
    at first. (ex. (x = 0)..(x + 1) )
  * Fixed a bug in Regexp which does not consider the octal literals.
  * Fixed a bug in Regexp which does not support '\h' and '\H' matchers.

= RubyMotion 1.24 =

  * Added support for the GM version of the iOS 6 SDK.
  * Added support for the iPhone5 architecture (armv7s).
  * Added new values for the `retina' option of `rake simulator': `3.5' (for
    iPhone4) and `4' (for iPhone5). A `true' value will default to `3.5' in
    case the simulator target is lesser than 6.0, otherwise, `4' will be used.
  * Added debugging support (experimental) for both simulator and device.
    Simply set the `debug' parameter to any value to attach the debugger
    (ex. `rake debug=1' for simulator and `rake device debug=1' for device).
    The Ruby code compiles with relevant DWARF metadata and the debugger
    used is gdb. Note that the debugger experience is a work in progress and
    will be significantly improved in future releases.
    Check out http://www.rubymotion.com/developer-center/articles/debugging
  * Fixed the `development' mode to not compile with LLVM optimizations. This
    results in faster compilation times and also better debugging support,
    but the code might run a bit slower. The `release' mode builds with the
    entire optimization passes.
  * Added to the build system the `mode' option which can be used to specify
    the build mode, either `development' (default) or `release'. You can now
    test your app in release mode by using `rake mode=release' for simulator
    and `rake device mode=release' for device.
  * Fixed the build system not to execute the user-defined application setup
    block twice, which is no longer necessary with the new `mode' option.