@@ -2,6 +2,8 @@
 
   * Fixed a bug when using Objective-C properties implemented using message
     forwarding (ex. GKMatchRequest's maxPlayers).
+  * Fixed a bug in build system. If info_plist is customized at except the
+    setup block end, it might cause build error.
   * Fixed a bug in Range evaluation order. Make sure evaluating a Range's begin
     at first. (ex. (x = 0)..(x + 1) )
   * Fixed a bug in Regexp which does not consider the octal literals.
